[project]
name = "zxs"
version = "0.1.0"
description = "DGUT Course Selection System with Playwright and MCP Integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "beautifulsoup4",
    "pycryptodome",
    "python-dotenv",
    "playwright",
    "httpx",
    "mcp",
    "typing-extensions",
]
